# vscode-cpp-dev

./: .gitignore  CMakeLists.txt  README.md
cuda_sample/: CMakeLists.txt
cuda_sample/include/: cuda_sample.h
cuda_sample/src/: cuda_sample.cu  main.cpp
header_lib_sample/: CMakeLists.txt
header_lib_sample/include/: header_lib_sample.h
scripts/: compile_commands_filter.py  ninja_filter.pl
src/: CMakeLists.txt  main.cpp
static_lib_sample/: CMakeLists.txt
static_lib_sample/include/: static_lib_sample.h
static_lib_sample/src/: static_lib_sample.cpp
test/: CMakeLists.txt
test/header_lib_sample/: CMakeLists.txt
test/static_lib_sample/: CMakeLists.txt  test.cpp
